@@ -1,73 +1,114 @@
 ---
 name: patterns
-description: Patrones del proyecto — arquitectura, naming, DI, navegación, anti-patrones. Fuente de verdad compartida.
+description: Patrones del proyecto SocketAndroidPOC — arquitectura, naming, dependencias, anti-patrones.
 user_invocable: false
 ---
 
-# Patterns
+# Patterns — SocketAndroidPOC
 
 **Fuente de verdad** para cómo se escribe código en esta app. Lo cargan: 🦧 (architect), developers, 🦉 (reviewer), 🦂 (security-auditor), 🐜 (codebase-researcher).
 
-> NOTA: Este archivo es un **template** derivado de una app Android de mayor escala. Adaptá/recortá secciones según el estado real del proyecto. Si una sección no aplica (p. ej. no usás Koin o Compose todavía), dejá la sección vacía o marcada como `N/A` para que los agentes no asuman su existencia.
+## Stack actual
+
+| Capa | Tecnología | Versión |
+|------|-----------|---------|
+| Gradle | wrapper | 8.5 |
+| AGP | `com.android.application` | 8.2.2 |
+| Kotlin | JVM | 1.9.22 |
+| JDK build | Corretto/Oracle | 17+ (probado con 21) |
+| compileSdk / targetSdk | Android | 34 |
+| minSdk | Android | 21 |
+| Java target | bytecode | 17 |
+| UI | Views XML + ViewBinding | — |
+| DI | **ninguno** | — |
+| Async | Coroutines + Flow | 1.5.x |
+| Observabilidad | LiveData + StateFlow | lifecycle 2.4.0-alpha03 |
+| Networking | OkHttp 3 (WebSocket + HTTP) | 4.9.0 |
+| JSON | Moshi + codegen (kapt) | 1.15.1 |
+| Tests | JUnit 4 | 4.13.2 |
 
 ## Architecture
 
-- **MVVM + MVI híbrido.** Features nuevas usan `MVIViewModel` (base class) con contrato `Intent`/`State`/`Effect`.
-- Features legacy con `AndroidViewModel` + LiveData se mantienen hasta que haya necesidad de tocarlas (no migrar proactivamente).
-- Capa de datos: Repository → Remote/Local datasource. Retorna `Resource<T>` (sealed: Loading/Success/Error).
-- Use Cases son `factory` en Koin, toman Repository y exponen `suspend operator fun invoke(...)`.
+- **MVVM simple.** `MainActivity` observa un `MainViewModel`.
+- ViewModel expone **`Flow`/`StateFlow`** que el Activity consume con `lifecycleScope.launchWhenStarted { ... collectLatest { ... } }`.
+- `ViewModelFactory` manual (sin DI framework).
+- WebSocket handling: `SocketListener` (OkHttp `WebSocketListener`) + `WebServiceProvider`.
+- Conectividad: `CheckNetworkConnection` como `LiveData<Boolean>`.
+- JSON parsing: `BitcoinTicker` con `@JsonClass(generateAdapter = true)` de Moshi.
 
 ## UI
 
-- **Compose** para pantallas nuevas. XML para legacy.
-- **No** usar `ComposeView` dentro de XML — migrar la pantalla completa o mantenerla en XML.
-- Scaffold raíz via `LocalScaffoldComposition.current`.
-- Imágenes remotas: `UrlImage` (wrapper de Coil).
+- **Solo XML layouts + ViewBinding.** No Compose.
+- ViewBinding habilitado (`buildFeatures.viewBinding true`).
+- Patrón en `MainActivity.kt:18-20`:
+  ```kotlin
+  binding = ActivityMainBinding.inflate(layoutInflater)
+  setContentView(binding.root)
+  ```
+- Acceder a vistas vía `binding.<id_camelCase>`.
 
 ## Naming
 
-| Tipo | Convención | Ejemplo |
-|------|-----------|---------|
-| ViewModel | `{Feature}ViewModel` | `BitcoinViewModel` |
-| Contract MVI | `{Feature}Contract` con `Intent`, `State`, `Effect` | `BitcoinContract` |
-| Screen Composable | `{Feature}Screen` (stateful) + `{Feature}Content` (stateless) | `BitcoinScreen` |
-| Repository | `{Feature}Repository` | `BitcoinRepository` |
-| Use Case | `{Verb}{Feature}UseCase` | `GetBitcoinPriceUseCase` |
-| Mapper | `{Source}To{Target}Mapper` | `BitcoinDtoToEntityMapper` |
-| Koin module | `{feature}Module` | `bitcoinModule` |
+| Tipo | Convención | Ejemplo real |
+|------|-----------|--------------|
+| Activity | `{Feature}Activity` | `MainActivity` |
+| ViewModel | `{Feature}ViewModel` | `MainViewModel` |
+| Factory | `ViewModelFactory` | `ViewModelFactory` |
+| DTO Moshi | `{Entity}` con `@JsonClass` | `BitcoinTicker` |
+| WebSocket listener | `{Feature}Listener` | `SocketListener` |
+| Provider | `{X}Provider` | `WebServiceProvider` |
+| Constantes | `object Constants` | `Constants.kt` |
 
-## DI (Koin)
+## DI / wiring
 
-- Un módulo por feature: `bitcoinModule`, `socketModule`, etc.
-- `single` para repositorios y datasources.
-- `viewModel` para ViewModels.
-- `factory` para use cases y mappers.
-- Registrar todos los módulos en `App.kt` vía `modules(listOf(...))`.
+- **Sin framework.** Instanciación manual vía `ViewModelFactory`:
+  ```kotlin
+  mainViewModel = ViewModelProvider(this, ViewModelFactory())[MainViewModel::class.java]
+  ```
+- Si crece la complejidad, antes de introducir un framework, proponer la migración como plan separado.
 
 ## Navigation
 
-- **Compose Navigation** con routes `@Serializable`.
-- Entre Activities: `startActivity(Intent(...))` clásico.
-- Deep links: Branch.io (ver `help.branch.io`).
-- No `SafeArgs` en código nuevo.
+- Actualmente **una sola Activity**. No hay Navigation Component, ni Fragments, ni SafeArgs.
+- Si se agregan pantallas, preferir Fragments + Navigation Component (XML) para mantener coherencia con Views, o proponer migración a Compose Navigation como ciclo separado.
 
-## Project APIs
+## Networking
 
-- `LocalScaffoldComposition` — acceso al Scaffold raíz desde cualquier Composable descendiente.
-- `UrlImage` — carga de imágenes remotas.
-- `Resource.asBearer()` — construye header `Authorization: Bearer <token>`.
+- OkHttp directo. No Retrofit.
+- WebSocket: `OkHttpClient.newWebSocket(request, listener)`.
+- Endpoints / URLs: `Constants.kt`.
+- Moshi con `kotlin-codegen` (kapt) para adaptadores.
+
+## Coroutines / Flow
+
+- ViewModel usa `viewModelScope.launch { ... }`.
+- Estado expuesto como `StateFlow` o `Flow`.
+- UI consume con `lifecycleScope.launchWhenStarted { flow.collectLatest { ... } }`.
+
+## Build / JDK
+
+- El build requiere **JDK 17+** (21 funciona). No usar JDK 11 (incompatible con AGP 8.x).
+- `gradle.properties` tiene `--add-opens` para kapt en JDK 17+.
+- Si el build falla por `class file major version`, chequear `JAVA_HOME`.
 
 ## DON'T (anti-patrones explícitos)
 
+- **No** introducir Compose sin un ciclo de migración planificado — actualmente el proyecto es 100% XML.
+- **No** introducir un framework de DI (Koin/Hilt) sin planificar — la app es pequeña, el factory manual alcanza.
+- **No** usar `kotlinx.android.synthetic` — fue migrado a ViewBinding deliberadamente.
+- **No** agregar `package="..."` al `AndroidManifest.xml` — AGP 8.x usa `namespace` en `build.gradle`.
+- **No** hardcodear URLs en Activities/ViewModels — van en `Constants.kt`.
+- **No** hacer `Log.d`/`println` de tokens, IDs sensibles, o payloads completos (el socket recibe precios en vivo — ok, pero si se agrega auth, cuidado).
+- **No** construir headers `Authorization` a mano — si se agrega auth, crear un helper.
+- **No** dejar clases con `@JsonClass(generateAdapter = true)` sin reglas `-keep` en `proguard-rules.pro` si se activa minify.
 - **No** usar `runBlocking` en producción.
-- **No** crear instancias nuevas de ViewModel manualmente — siempre vía `viewModel()` de Koin.
-- **No** loggear tokens, passwords ni PII.
-- **No** construir el header Bearer a mano — usar `asBearer()`.
-- **No** dejar clases con `@JsonClass` (Moshi) sin reglas `-keep` en ProGuard.
-- **No** `setJavaScriptEnabled(true)` en WebView salvo que esté justificado.
-- **No** usar `android:exported="true"` sin permisos.
-- **No** `AES/ECB`, `MD5`, `SHA1`.
+- **No** `setJavaScriptEnabled(true)` en WebView salvo justificación clara.
+- **No** `android:exported="true"` sin permisos en components nuevos.
+- **No** AES/ECB, MD5, SHA1 para criptografía.
 
-## Tech debt conocido (respetar — no arreglar salvo que la tarea lo pida)
+## Tech debt conocido
 
-- _(listar aquí deuda técnica conocida que los agentes no deben tocar)_
+- `kotlin-android-extensions` fue removido en la migración a Gradle 8.5 (antes de esa migración, `MainActivity` usaba synthetics).
+- `minifyEnabled false` en release — si se activa, hay que agregar reglas ProGuard para `BitcoinTicker` y cualquier `@JsonClass` futuro.
+- `kapt` para Moshi codegen está deprecado a favor de KSP. Migración recomendada pero no urgente.
+- Tests existentes son mínimos (`ExampleUnitTest`, `ExampleInstrumentedTest`). Ampliar cobertura cuando se toque lógica.
